# OpenCV_KNN_OCR

./: CMakeLists.txt  README.md  main.cpp
Output/: images.xml
